--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="orange-color">Mejbah Rafe</span> World</h1>
-    <h3>Bacca Developer</h3>
-    <p>My Dream of Becoming a Web Developer.
-        As a young child, my dream occupation was to dig up dinosaurs. As I grew older and my interests changed, my dream profession changed also. Although most of these dreams were not very long lived, one occupational dream has outlasted all others, and has finally emerged as the dream I passionately pursue.</p>
+
+
+    <section>
+
+        <div class="half-width">
+
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Mejbah Rafe</span> World</h1>
+            <h3>Bacca Developer</h3>
+            <p>My Dream of Becoming a Web Developer.
+                As a young child, my dream occupation was to dig up dinosaurs. As I grew older and my interests changed,
+                my
+                dream profession changed also. Although most of these dreams were not very long lived, one occupational
+                dream
+                has outlasted all others, and has finally emerged as the dream I passionately pursue.</p>
+            <a class="link-button" href="https://www.linkedin.com/in/mejbah-uddin-rafi-766909211/" target=" _blank">HIRE
+                ME</a>
+
+        </div>
+
+        <div class="half-width">
+
+            <img src="image/mejbah.png" alt="">
+
+        </div>
+    </section>
 
 
 
@@ -24,4 +47,5 @@
 
 
 </body>
+
 </html>
