dream area added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-    <section>
+    <section class="top-banner">
 
         <div class="half-width">
 
@@ -35,9 +35,29 @@
 
         <div class="half-width">
 
-            <img src="image/mejbah.png" alt="">
+            <img src="image/mejbah.png" alt="This is my pic">
 
         </div>
+    </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="image/mejbah.png" alt="This is my Pic">
+
+
+
+        </div>
+        <div class="half-width">
+            <h3>Dream Big</h3>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics</p>
+            <a class="link-button" target=" _blank"
+                href="https://www.linkedin.com/in/mejbah-uddin-rafi-766909211/">DOWNLOAD RESUME</a>
+
+
+        </div>
+
+
+
     </section>
 
 
