--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="half-width">
             <h3>Dream Big</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
-                to make simple website. My goal is to build 3 websites and learn advanced topics</p>
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="link-button" target=" _blank"
                 href="https://www.linkedin.com/in/mejbah-uddin-rafi-766909211/">DOWNLOAD RESUME</a>
 
