--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
 
         <div class="half-width">
 
@@ -39,7 +39,7 @@
 
         </div>
     </section>
-    <section class="dream-area">
+    <section class="dream-area flexible-container">
         <div class="half-width">
             <img src="image/mejbah.png" alt="This is my Pic">
 
@@ -47,7 +47,8 @@
 
         </div>
         <div class="half-width">
-            <h3>Dream Big</h3>
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
             <a class="link-button" target=" _blank"
@@ -55,9 +56,29 @@
 
 
         </div>
+    </section>
+    <section class="experience-area">
 
+        <h1>EXPERIENCES</h1>
+        <div class="flexible-container">
 
+            <div class="half-width">
+                <h1 class="colour">Full Stack Web Developer</h1>
+                <h3>2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
 
+            </div>
+            <div class="half-width">
+
+                <h1 class="colour">Bacca Web Developer</h1>
+                <h3>2021-2022 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
     </section>
 
 
