--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1>EXPERIENCES</h1>
         <div class="flexible-container">
 
-            <div class="experience-item">
+            <div id="web-dev-experience" class="experience-item">
                 <h2 class="colour">Full Stack Web Developer</h2>
                 <h3>2022-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -70,7 +70,7 @@
                     Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
 
             </div>
-            <div class="experience-item">
+            <div id="bacca-developer" class="experience-item">
 
                 <h2 class="colour">Bacca Web Developer</h2>
                 <h3>2021-2022 | Programming Hero Learner</h3>
@@ -83,7 +83,9 @@
 
 
 
-
+    <footer>
+        <p>© Mejbah Rafe 2021, a Programming Hero initiative.</p>
+    </footer>
 
 
 
